vpc.tf
#Creating VPC 
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "my-vpc"
  }
  # enable_dns_hostnames = true
}
